objects/PortalNotificationSchedule__c.object
<CustomObject>
    <description>The schedule for each portal notification digest to be sent out to a contact.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The contact whose portal notification schedule this is.</description>
        <inlineHelpText>The contact whose portal notification schedule this is.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portal Notification Schedules</relationshipLabel>
        <relationshipName>PortalNotificationSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DigestType__c</fullName>
        <description>Specifies whether this is the next digest to be sent out is the first one, a continued one, the last one, or whether this digest frequency has ended for this contact. This informs the data period in the report.</description>
        <inlineHelpText>Specifies whether this is the next digest to be sent out is the first one, a continued one, the last one, or whether this digest frequency has ended for this contact. This informs the data period in the report.</inlineHelpText>
        <label>Digest Type</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>The frequency of this digest.</description>
        <inlineHelpText>The frequency of this digest.</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiannually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NextDigestDate__c</fullName>
        <description>The next scheduled date that this digest will be sent out.</description>
        <inlineHelpText>The next scheduled date that this digest will be sent out.</inlineHelpText>
        <label>Next Digest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreviousDigestDateSummary__c</fullName>
        <description>The date and time of the latest digest to have gone out at this frequency.</description>
        <inlineHelpText>The date and time of the latest digest to have gone out at this frequency.</inlineHelpText>
        <label>Previous Digest Date Summary</label>
        <summarizedField>PortalNotification__c.SentDate__c</summarizedField>
        <summaryForeignKey>PortalNotification__c.PortalNotificationSchedule__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Portal Notification Schedule</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Portal Notification Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Notification Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>